# opengl_practice

./: CMakeLists.txt  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  main.cpp  stb_image.cpp  stb_image.h
res/: basicShader.fs  basicShader.fs.glsl  basicShader.vs  basicShader.vs.glsl
